# cpp_project_template

./: CMakeLists.txt
Tools/: check-with-clang-tidy  tmux-setup.sh
tests/: CMakeLists.txt
